# exo-protocol

./: .env.example  .gitignore  AI_MEMORY.md  DECISION_LOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  task.md  优化方案.md
anchor/: Anchor.toml  Cargo.toml  build_log.txt  package-lock.json  package.json  tsconfig.json
anchor/programs/exo-core/: Cargo.toml
anchor/programs/exo-core/src/: lib.rs
anchor/programs/exo-core/src/instructions/: create_agent.rs  escrow.rs  mod.rs  register_skill.rs  staking.rs
anchor/programs/exo-core/src/state/: agent.rs  escrow.rs  mod.rs  skill.rs
anchor/programs/exo-hooks/: Cargo.toml
anchor/programs/exo-hooks/src/: lib.rs
anchor/programs/exo-hooks/src/state/: mod.rs
docs/: AGENT_STANDARD.md  CHAMPION_VIDEO_GUIDE_V3.md  FRONTEND_CODE_REVIEW.md  HACKATHON_REINFORCEMENT_PLAN.md  HACKATHON_SPRINT_PLAN.md  HACKATHON_SUBMISSION_GUIDE.md  SECURITY_AUDIT.md  SKILL_SCHEMA.md  SUBMISSION_PLAN.md  Solana 黑客松参赛战略报告.md  UI_UX_UPGRADE_PLAN.md  VIDEO_RECORDING_GUIDE.md  VIDEO_RECORDING_SCRIPT.md  Video_rec_scr.md  api-reference.md  architecture.md  langchain_agent_skills_docs.md  mvp v2.0.md  v5.0.md  项目现状.md
exo-cli/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
exo-frontend/: README.md  build_error.txt  build_log.txt  build_log_v2.txt  error_response.json  error_utf8.txt  full_error.txt  package.json  pnpm-lock.yaml
exo-sdk/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
scripts/: build-and-deploy.sh  deploy-devnet.sh  fix-anchor.sh  proxy-deploy.sh  run-demo.ts  seed-chain.ts  seed-demo-data.ts  (+3 more)
(+262 files in other folders)
