[package]
name = "exo-core"
version = "0.1.0"
description = "Exo Protocol Core - Skill Registry and Agent Economy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exo_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
