[package]
name = "exo-hooks"
version = "0.1.0"
description = "Exo Protocol Transfer Hook - Token-2022 Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exo_hooks"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = { version = "0.31.1", features = ["token_2022"] }
